# clarinet

./: Cargo.toml
components/clarinet-cli/: Cargo.toml
components/clarinet-cli/src/frontend/: dap.rs
components/clarity-dap/: Cargo.toml
components/clarity-dap/src/: common.rs  lib.rs  wasm_bridge.rs
components/clarity-dap/src/dap/: codec.rs  mod.rs
components/clarity-lsp/src/utils/: mod.rs
components/clarity-repl/src/repl/: mod.rs  session.rs
components/clarity-vscode/: .gitignore  .vscodeignore  package-lock.json  package.json  web-extension.code-workspace  webpack.config.dev.js  webpack.config.js
components/clarity-vscode/client/: package.json  tsconfig.json
components/clarity-vscode/client/src/: clientBrowser.ts
components/clarity-vscode/client/src/debug/: activateClarinetDebug.ts  dapServer.ts  debugSession.ts
components/clarity-vscode/debug/: debug.ts
components/clarity-vscode/server-dap/: package.json
components/clarity-vscode/server-dap/src/: server.ts
